--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <button class="button" id="rock">Rock</button>
+    <button class="button" id="paper">Paper</button>
+    <button class="button" id="scissors">Scissors</button>
 
 </body>
 </html>
