--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <div class="btnDiv">
     <button class="button" id="rock">Rock</button>
     <button class="button" id="paper">Paper</button>
     <button class="button" id="scissors">Scissors</button>
+    </div>
+
+    <div class="computerChooses"></div>
+    <div class="winnerText"></div>
+
+    <div class="container">
+    <div class="title"><h1>Scoreboard</h1></div>
+    <div class="scores">
+    <div class="playerDiv">Player: <span class="playerScore"></span></div>
+    <div class="computerDiv">Computer: <span class=computerScore"></span></div>
+    </div>
+    </div>
 
 </body>
 </html>
