--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     <div class="title"><h1>Scoreboard</h1></div>
     <div class="scores">
     <div class="playerDiv">Player: <span class="playerScore"></span></div>
-    <div class="computerDiv">Computer: <span class=computerScore"></span></div>
+    <div class="computerDiv">Computer: <span class="computerScore"></span></div>
     </div>
     </div>
+
+    <div class="finalScore"></div>
+    <div class="theWinner"></div>
 
 </body>
 </html>
