Feat: add logic of boxing type scoreboard
rounds are scored on a 10-9 basis with the
total adding up in the scoreboard.

To-Do: score drawn rounds 9-9
To-Do: Finish game after 5 rounds, regardless of score

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div class="winnerText"></div>
 
     <div class="container">
-    <div class="title"><h1>Scoreboard</h1></div>
     <div class="scores">
     <div class="playerDiv">Player: <span class="playerScore"></span></div>
     <div class="computerDiv">Computer: <span class="computerScore"></span></div>
@@ -28,5 +27,52 @@
     <div class="finalScore"></div>
     <div class="theWinner"></div>
 
+    <div class="title"><h1>Scoreboard</h1></div>
+
+    <div class="scoreboardNew">
+
+    <div class="scoreName">
+        <div class="scoreTitleDivName">Name:</div>
+        <div class="playerScoreDivTitle">Player</div>
+        <div class="computerScoreDivTitle">Computer</div>
+    </div>
+
+    <div class="roundOne">
+        <div class="roundOneTitle">1</div>
+        <div class="round1Player"></div>
+        <div class="round1Computer"></div>
+    </div>
+
+    <div class="roundTwo">
+        <div class="roundTwoTitle">2</div>
+        <div class="round2Player"></div>
+        <div class="round2Computer"></div>
+    </div>
+
+    <div class="roundThree">
+        <div class="roundThreeTitle">3</div>
+        <div class="round3Player"></div>
+        <div class="round3Computer"></div>
+    </div>
+
+    <div class="roundFour">
+        <div class="roundFourTitle">4</div>
+        <div class="round4Player"></div>
+        <div class="round4Computer"></div>
+    </div>
+
+    <div class="roundFive">
+        <div class="roundFiveTitle">5</div>
+        <div class="round5Player"></div>
+        <div class="round5Computer"></div>
+    </div>
+
+    <div class="scoreFinal">
+        <div class="scoreFinalTitle">Total:</div>
+        <div class="scoreFinalPlayer"></div>
+        <div class="scoreFinalComputer"></div>
+    </div>
+
+    </div>
 </body>
 </html>
